# archaea-genome-prep

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  generate_example_data.py  pyproject.toml
.github/workflows/: ci.yml
archaea_genome_prep/: __init__.py  annotator.py  cleaner.py  pipeline.py  validator.py
tests/: test_prep.py
